Fix tab flow on login page on safari.

--- a/app/assets/stylesheets/defaults.css.scss
+++ b/app/assets/stylesheets/defaults.css.scss
@@ -90,6 +90,10 @@ label.custom-check-box {
 
 
 .button {
+  &:focus {
+    outline: none;
+  }
+
   &.tiny {
     font-size: .8875rem;
     padding-top: .525rem;
@@ -176,4 +180,10 @@ label.custom-check-box {
   > .cancel {
     padding-top: 1em;
   }
+}
+
+
+label.for-check-box {
+  display: inline-block;
+  margin: 0 0 2rem .8rem;
 }
